--- a/custom_components/mytpu/manifest.json
+++ b/custom_components/mytpu/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "mytpu",
   "name": "Tacoma Public Utilities",
-  "codeowners": [],
+  "codeowners": ["@thetic"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/chadcondon/mytpu",
+  "documentation": "https://github.com/thetic/mytpu",
   "homeassistant": "2025.12.0",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/chadcondon/mytpu/issues",
+  "issue_tracker": "https://github.com/thetic/mytpu/issues",
   "requirements": ["aiohttp>=3.8.0"],
   "version": "0.1.0"
 }
