--- a/custom_components/mytpu/manifest.json
+++ b/custom_components/mytpu/manifest.json
@@ -4,10 +4,10 @@
   "codeowners": ["@thetic"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/thetic/mytpu",
+  "documentation": "https://github.com/thetic/hass-mytpu",
   "homeassistant": "2025.12.0",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/thetic/mytpu/issues",
+  "issue_tracker": "https://github.com/thetic/hass-mytpu/issues",
   "requirements": ["aiohttp>=3.8.0"],
   "version": "0.1.0"
 }
