--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,10 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+[project]
+name = "hass-mytpu"
+version = "0.1.0"
+requires-python = ">=3.12"
 
 [dependency-groups]
 dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff"]
-
-[project]
-name = "mytpu"
-version = "0.1.0"
-description = "Python library for Tacoma Public Utilities (TPU) API"
-readme = "README.md"
-requires-python = ">=3.12"
-license = "MIT"
-keywords = ["tacoma", "utilities", "energy", "water", "home-assistant"]
-authors = [{ name = "Chad Condon" }]
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
-]
-dependencies = ["aiohttp>=3.8.0"]
-
-[project.urls]
-Homepage = "https://github.com/thetic/hass-mytpu"
-Issues = "https://github.com/thetic/hass-mytpu/issues"
 
 [tool.ruff]
 target-version = "py312"
