Add recorder to after_dependencies in manifest
Required for statistics import functionality.

--- a/custom_components/mytpu/manifest.json
+++ b/custom_components/mytpu/manifest.json
@@ -4,6 +4,7 @@
   "codeowners": ["@thetic"],
   "config_flow": true,
   "dependencies": [],
+  "after_dependencies": ["recorder"],
   "documentation": "https://github.com/thetic/hass-mytpu",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/thetic/hass-mytpu/issues",
