--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,13 +2,7 @@ name: Lint
 
 on:
   push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
-
-permissions: {}
 
 jobs:
   ruff:
@@ -22,10 +16,10 @@ jobs:
         uses: astral-sh/setup-uv@v5
 
       - name: Lint
-        run: uv run ruff check .
+        run: uv run ruff check
 
       - name: Format check
-        run: uv run ruff format --check .
+        run: uv run ruff format --check
 
   ty:
     name: Type Check
@@ -38,4 +32,4 @@ jobs:
         uses: astral-sh/setup-uv@v5
 
       - name: Type check
-        run: uv run ty check custom_components
+        run: uv run ty check
