--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,12 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh release create "v${{ steps.version.outputs.version }}" \
-            --title "v${{ steps.version.outputs.version }}" \
-            --generate-notes
+          version="${{ steps.version.outputs.version }}"
+          prerelease_flag=""
+          if [[ "$version" == *"beta"* ]] || [[ "$version" == *"b"* ]] || [[ "$version" == *"alpha"* ]] || [[ "$version" == *"rc"* ]]; then
+            prerelease_flag="--prerelease"
+          fi
+          gh release create "v$version" \
+            --title "v$version" \
+            --generate-notes \
+            $prerelease_flag
