--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,10 @@ ignore = ["E501"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 addopts = [
     "--cov=custom_components/mytpu",
     "--cov-report=term-missing",
-    "--cov-report=xml",
 ]
 
 [tool.coverage.run]
