test: Configure pytest to treat warnings as errors
- Add -W error flag to pytest configuration
- Filter out ResourceWarning and PytestUnraisableExceptionWarning
  (these are cleanup warnings from HA test fixtures)
- Fix test_validate_and_fetch_services_connection_error to properly
  mock the client with token data instead of trying to trigger login

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ asyncio_default_fixture_loop_scope = "function"
 addopts = [
     "--cov=custom_components/mytpu",
     "--cov-report=term-missing",
+    "-W error",
+    "-W ignore::ResourceWarning",
+    "-W ignore::pytest.PytestUnraisableExceptionWarning",
 ]
 
 [tool.coverage.run]
